# soziopolis-lingq-scraper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
assets/: soziopolis-icon.html
docs/: architecture.md  data-model.md  dev-notes.md  release-checklist.md  reliability.md
docs/adr/: 0001-gui-only.md  0002-local-sqlite.md  0003-background-tasks.md
docs/releases/: v1.1.0.md
installer/: SoziopolisReader.iss
scripts/: build-installer.ps1  build-portable.ps1
src/: app_error.rs  app_ops.rs  app_paths.rs  commands.rs  context.rs  credential_store.rs  database.rs  domain.rs  gui.rs  jobs.rs  lib.rs  lingq.rs  logging.rs  main.rs  perf.rs  repositories.rs  services.rs  settings.rs  soziopolis.rs  topics.rs
src/database/: maintenance.rs  migrations.rs  types.rs
src/gui/: actions.rs  diagnostics.rs  events.rs  helpers.rs  jobs.rs  message.rs  shell.rs  state.rs  style.rs  tasks.rs  update.rs  views.rs
src/soziopolis/: cache.rs  parse.rs  types.rs
tests/: workflows.rs
tests/fixtures/: soziopolis_article_fixture.html  soziopolis_real_essay_listing_fixture.html  soziopolis_real_interview_listing_fixture.html  soziopolis_real_interview_page10_fixture.html  soziopolis_section_fixture.html  topic_cases.json
